# hespot

./: .gitignore  DESIGN.md  README.md  cabal.project  hespot.cabal
app/: Main.hs
src/: Spotify.hs
src/Spotify/: Connect.hs  Connection.hs  Id.hs  Mercury.hs  Metadata.hs  Session.hs  WebApi.hs
src/Spotify/Audio/: Cdn.hs  Decrypt.hs  Fetch.hs  OggTag.hs
src/Spotify/Auth/: Cache.hs  ClientToken.hs  Login5.hs  Modern.hs  OAuth.hs
src/Spotify/Crypto/: DiffieHellman.hs  Hashcash.hs  Keys.hs  Shannon.hs
src/Spotify/Net/: ApResolve.hs
src/Spotify/Proto/: Authentication.hs  Keyexchange.hs  Wire.hs
test/: Spec.hs
